# teal

./: .gitignore  .gitmodules  go.mod  go.sum
.github/workflows/: shellcheck.yml  tests.yml
aggregator/: aggregator.go
crossChainExample/: README.md
crossChainExample/aggregator/: eth_call.go
crossChainExample/contracts/: foundry.toml
crossChainExample/contracts/script/: DeployCertificateVerifier.s.sol  DeployCertificateVerifier.sol  DeployCrossChainAVS.s.sol  DeployCrossChainAVS.sol
crossChainExample/contracts/src/: MinimalServiceManager.sol
crossChainExample/scripts/: acquire_and_deposit_steth.sh  init_operators.sh  initialize-operator.sh  operator.yaml  register.go  register_operator_avs.sh  start_aggregator.sh  start_nodes.sh  transport_stakes.sh
crossChainExample/utils/: crossChainUtils.go
e2e/: e2e_test.go
example/: README.md
example/contracts/: remappings.txt
example/scripts/: acquire_and_deposit_steth.sh  initialize-operator.sh  operator.yaml  register.go  register_operator_avs.sh  start_aggregator.sh
example/utils/: deployment.go
go/: go.mod
go/aggregator/: aggregator.go  aggregator_test.go
go/e2e/: e2e_test.go  even_loving.go
go/example/aggregator/: eth_call.go
rs/: Cargo.toml  README.md  build.rs
rs/src/: lib.rs
rs/src/aggregator/: mod.rs  operator_requester.rs
rs/src/api/proto/: mod.rs  node.rs
rs/src/common/: types.rs
rs/src/node/server/: mod.rs
rs/src/node/service/: mod.rs
rs/tests/: contracts-deployed-anvil-state.json  e2e.rs  even_loving.rs
transporter/: distribution.go  transport.go  transport_test.go
(+22 files in other folders)
